use java 17 features